<resources>
    <string name="app_name">Bullseye</string>
    <string name="instruction_text">PUT THE BULLSEYE AS CLOSE AS YOU CAN TO</string>
    <string name="min_value_text">1</string>
    <string name="max_value_text">100</string>
    <string name="target_value_text">67</string>
    <string name="hit_me_btn">Hit me</string>
    <string name="result_dialog_title">Hello there!</string>
    <string name="result_dialog_message">The target\'s value is %1$d.\nYou scored %2$d points this round.</string>
    <string name="result_dialog_button_text">Awesome!</string>
    <string name="infoButton">Info</string>
    <string name="startOver">Start Over</string>
    <string name="score_label">Score</string>
    <string name="current_round_label">Round</string>
    <string name="alert_title_1">Perfect</string>
    <string name="alert_title_2">You almost had it!</string>
    <string name="alert_title_3">Not Bad</string>
    <string name="alert_title_4">Are you even trying?</string>
    <string name="about_header">🎉 Bullseye 🎉</string>
    <string name="about_bullseye_text">This is Bullseye, the game where you can win points and earn
        fame by dragging a slider.\nYour goal is to place the slider as close as possible to the target
        value. The closer you are, the more points you score.\nEnjoy!</string>
    <string name="back_button_text">Go Back!</string>
    <string name="about_page_title">About Bullseye</string>
</resources>